# mi-trainer

./: .gitignore  CONCEPT.md  DESIGN.md  MVP.md  README.md  ROADMAP.md  STACK.md  UX.md  pyproject.toml
mi_trainer/: __init__.py  app.py  config.py  main.py
mi_trainer/agents/: __init__.py  base.py  client.py  coach.py  scenario_builder.py
mi_trainer/models/: __init__.py  conversation.py  feedback.py  scenario.py
mi_trainer/prompts/: client_system.md  coach_system.md  scenario_builder.md
mi_trainer/scenarios/: alcohol_reduction.json  career_change.json  exercise_motivation.json  medication_adherence.json  relationship_conflict.json  smoking_cessation.json
mi_trainer/storage/: __init__.py  scenarios.py  sessions.py
mi_trainer/ui/: __init__.py  conversation_pane.py  feedback_pane.py  input_area.py  layout.py  styles.py
web/: package-lock.json  package.json
web/prisma/: schema.prisma  seed.ts
web/src/app/: layout.tsx  page.module.css  page.tsx
web/src/app/(app)/: layout.module.css  layout.tsx
web/src/app/(app)/dashboard/: page.module.css  page.tsx
web/src/app/(app)/debrief/[sessionId]/: DebriefView.tsx  (+2 more)
web/src/app/(app)/scenarios/: ScenarioCard.module.css  ScenarioCard.tsx  page.module.css  page.tsx
web/src/app/(app)/sessions/: page.module.css  page.tsx
web/src/app/(auth)/: layout.module.css  layout.tsx
web/src/app/api/analyze/: route.ts
web/src/app/api/chat/: route.ts
web/src/app/api/debrief/: route.ts
web/src/app/api/scenarios/: route.ts
web/src/app/api/sessions/: route.ts
web/src/lib/prompts/: analyst.ts  client.ts  debrief.ts
(+6 files in other folders)
